# visa-processing-times

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: scrape.yml
data/: applications_on_hand.csv  applications_received.csv  processing_times.csv
tech-discussions/: scraping-approach.md
tests/: test_scraper.py
tests/fixtures/: mock_page.html
